--- a/views/soupcon.erb
+++ b/views/soupcon.erb
@@ -5,6 +5,6 @@
     <link href="css/viewer_page.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
+<h1>Display ALL the things!!</h1>
   </body>
 </html>
