--- a/public/css/viewer_page.css
+++ b/public/css/viewer_page.css
@@ -1,5 +1,6 @@
 body {
-  background-color:lightGrey;
+  #background-color:lightGrey;
+  background-color:ghostWhite;
 }
 div {
   font-family:Oxygen Mono, Georgia;
