Fooling with nokogiri

--- a/views/soupcon.erb
+++ b/views/soupcon.erb
@@ -5,7 +5,7 @@
     <link href="css/viewer_page.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-<h1>Display ALL the things!!</h1>
+  <%=readRecipe%>
   <%=returnSomething%>
   </body>
 </html>
