First working version

--- a/public/css/viewer_page.css
+++ b/public/css/viewer_page.css
@@ -1,6 +1,6 @@
 body {
   #background-color:lightGrey;
-  background-color:ghostWhite;
+  background-color:AliceBlue;
 }
 div {
   font-family:Oxygen Mono, Georgia;
