--- a/views/soupcon.erb
+++ b/views/soupcon.erb
@@ -3,6 +3,7 @@
     <title>YummySoup Viewer</title>
     <link href='http://fonts.googleapis.com/css?family=Oxygen+Mono' rel='stylesheet' type='text/css'>
     <link href="css/viewer_page.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 1024px)" href="fire.css" />
   </head>
   <body>
   <%=readRecipe%>
