Mysterious erb error

--- a/views/soupcon.erb
+++ b/views/soupcon.erb
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Recipes Index</h1>
-    <%loadRecipesList%>
+    <%#loadRecipesList%>
     <ul>
       <%@recipes.each_index { |x| %>
         <li><a href=recipes/<%=x.to_s + ">" + @recipes[x]["name"]%></a></li>
