--- a/views/structure.erb
+++ b/views/structure.erb
@@ -6,7 +6,13 @@
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 1024px)" href="css/kindle_fire.css" />
   </head>
   <body>
-  <%= displayRecipe %>
-
+<ul>
+  <% @recipe.each { |x, y| %>
+    <li>
+      <%= "Key: " + x.to_s %>
+    <br>
+      <%= "Value: " + y.to_s %>
+    </li>
+  <% } %>
   </body>
 </html>
