--- a/app/views/structure.erb
+++ b/app/views/structure.erb
@@ -3,9 +3,10 @@
     <title>YummySoup Viewer</title>
     <link href='http://fonts.googleapis.com/css?family=Oxygen+Mono' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 1024px)" href="css/kindle_fire.css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
+  <%= erb :header %>
 <ul>
   <% @recipe.each { |x, y| %>
     <li>
