Fixing recipes view

--- a/app/views/recipe.erb
+++ b/app/views/recipe.erb
@@ -11,12 +11,8 @@
     <div class="span3 well">
       <h2>Ingredients</h2>
       <ul>
-        <%= #@recipe["ingredientsArray"].split(";").inspect %>
-        <% #@recipe["ingredientsArray"].split(";").each |x| { %>
-        <li>
-          <%= #"x.to_s" %>
-        </li>
-        <% } %>
+        <li>Placeholder 1</li>
+        <li>Placeholder 2</li>
       </ul>
     </div>
     <div class="span9">
